<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_rectangle" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="361dp"
        android:layout_height="225dp"
        android:layout_marginStart="84dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_rectangle" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_vector" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="134dp"
        android:layout_height="254dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_vector_side" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_ellipse" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView11"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:srcCompat="@drawable/ic_notifications" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_search" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:srcCompat="@drawable/ic_vector_note" />

    <LinearLayout
        android:id="@+id/mainLayOut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <TextView
            android:id="@+id/mainTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/main"
            android:backgroundTint="@color/background_clr"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/trendingTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/trending"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/exploreTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/explore"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/exchangeIMG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_import_export" />
    </LinearLayout>

    <TextView
        android:id="@+id/feedTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/feed"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/mainLayOut"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toEndOf="@+id/feedTV"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/ic_account_circle" />

    <ImageView
        android:id="@+id/profileIMG"
        android:layout_width="93dp"
        android:layout_height="93dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="44dp"
        android:maxWidth="93dp"
        android:maxHeight="93dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mainLayOut"
        app:srcCompat="@drawable/profile" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/profileIMG"
        app:layout_constraintEnd_toEndOf="@+id/profileIMG"
        app:srcCompat="@drawable/add_circle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/storyRecyclerView"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView16"
        app:layout_constraintTop_toBottomOf="@+id/mainLayOut"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:maxWidth="73dp"
        android:maxHeight="73dp"
        app:layout_constraintStart_toEndOf="@+id/profileIMG"
        app:layout_constraintTop_toBottomOf="@+id/mainLayOut"
        app:srcCompat="@drawable/recc" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:maxWidth="23dp"
        android:maxHeight="23dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView16"
        app:layout_constraintStart_toStartOf="@+id/imageView16"
        app:srcCompat="@drawable/ellip" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:maxWidth="23dp"
        android:maxHeight="23dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView16"
        app:layout_constraintStart_toStartOf="@+id/imageView16"
        app:srcCompat="@drawable/ellipse" />

    <!--    <ImageView-->
    <!--        android:id="@+id/imageView19"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:layout_marginStart="26dp"-->
    <!--        android:maxWidth="93dp"-->
    <!--        android:maxHeight="93dp"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/imageView16"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/mainLayOut"-->
    <!--        app:srcCompat="@drawable/exercise" />-->

    <TextView
        android:id="@+id/yourStoryTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/your_story"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/profileIMG"
        app:layout_constraintStart_toStartOf="@+id/profileIMG"
        app:layout_constraintTop_toBottomOf="@+id/profileIMG" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/discover_creators"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintEnd_toStartOf="@+id/storyRecyclerView"
        app:layout_constraintStart_toStartOf="@+id/imageView16"
        app:layout_constraintTop_toBottomOf="@+id/imageView16" />


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <LinearLayout
            android:id="@+id/fragLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>